# adventofcode2024

./: .gitignore  pyproject.toml
2024/: day4.py
adventofcode/2024/: day4.py
