[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "repo containing advent of code scripts"
authors = ["kkawabat <kkawabat@auralanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
